[package]
name = "tokidator"
description = "Token based authentication framework"
version = "0.3.0"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2018"
publish = true
license = "MIT"
repository = "https://github.com/nuimk/tokidator"
keywords = ["token"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
bitvec = "0.17.4"
num-derive = "0.3.1"
num-traits = "0.2.12"
ring = "0.16.15"

[dev-dependencies]
criterion = "0.3.3"
lazy_static = "1.4.0"
protobuf = "2.17.0"
rand = "0.7.3"
strum = "0.19.2"
strum_macros = "0.19.2"

[[bench]]
name = "benchmarks"
harness = false

[build-dependencies]
protobuf-codegen-pure = "2.17.0"
