[package]
name = "tokidator"
description = "Token based authentication framework"
version = "0.8.1"
authors = ["Nui Narongwet <narongwet.m@gmail.com>"]
edition = "2021"
publish = true
license = "MIT"
repository = "https://github.com/nuimk/tokidator"
keywords = ["token"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.13"
bitvec = "1"
num-derive = "0.3"
num-traits = "0.2"
ring = "0.16"
tracing = "0.1"

[dev-dependencies]
criterion = "0.3.5"
once_cell = "1.12.0"
protobuf = "3.0.3"
rand = "0.8.5"
strum = { version = "0.24.0", features = ["derive"] }

[[bench]]
name = "benchmarks"
harness = false

[build-dependencies]
protobuf-codegen = "3.0.3"
